--- a/WS5/environment.yml
+++ b/WS5/environment.yml
@@ -1,370 +1,7 @@
-name: base
+name: myenv
 channels:
-  - conda-forge
   - defaults
 dependencies:
-  - _ipyw_jlab_nb_ext_conf=0.1.0
-  - _libgcc_mutex=0.1
-  - alabaster=0.7.12
-  - anaconda=custom
-  - anaconda-client=1.7.2
-  - anaconda-navigator=1.10.0
-  - anaconda-project=0.8.4
-  - argh=0.26.2
-  - argon2-cffi=20.1.0
-  - asn1crypto=1.4.0
-  - asteval=0.9.16
-  - astroid=2.4.2
-  - astropy=4.0.2
-  - async_generator=1.10
-  - atomicwrites=1.4.0
-  - attrs=20.3.0
-  - autopep8=1.5.4
-  - babel=2.8.1
-  - backcall=0.2.0
-  - backports=1.0
-  - backports.functools_lru_cache=1.6.1
-  - backports.shutil_get_terminal_size=1.0.0
-  - backports.tempfile=1.0
-  - backports.weakref=1.0.post1
-  - beautifulsoup4=4.9.3
-  - bitarray=1.6.1
-  - bkcharts=0.2
-  - blas=1.0
-  - bleach=3.2.1
-  - blosc=1.16.3
-  - bokeh=2.2.3
-  - boto=2.49.0
-  - bottleneck=1.3.2
-  - brotlipy=0.7.0
-  - bzip2=1.0.8
-  - ca-certificates=2020.11.8
-  - cairo=1.14.12
-  - certifi=2020.11.8
-  - cffi=1.14.0
-  - cfitsio=3.470
-  - chardet=3.0.4
-  - click=7.1.2
-  - click-plugins=1.1.1
-  - cligj=0.7.0
-  - cloudpickle=1.6.0
-  - clyent=1.2.2
-  - colorama=0.4.4
-  - conda=4.9.2
-  - conda-build=3.20.5
-  - conda-env=2.6.0
-  - conda-package-handling=1.7.2
-  - conda-verify=3.4.2
-  - contextlib2=0.6.0.post1
-  - cryptography=3.2.1
-  - curl=7.67.0
-  - cycler=0.10.0
-  - cython=0.29.21
-  - cytoolz=0.11.0
-  - dask=2.30.0
-  - dask-core=2.30.0
-  - dbus=1.13.18
-  - decorator=4.4.2
-  - defusedxml=0.6.0
-  - diff-match-patch=20200713
-  - distributed=2.30.1
-  - docutils=0.16
-  - entrypoints=0.3
-  - et_xmlfile=1.0.1
-  - expat=2.2.10
-  - fastcache=1.1.0
-  - filelock=3.0.12
-  - fiona=1.8.13.post1
-  - flake8=3.8.4
-  - flask=1.1.2
-  - fontconfig=2.13.0
-  - freetype=2.10.4
-  - freexl=1.0.5
-  - fribidi=1.0.10
-  - fsspec=0.8.3
-  - future=0.18.2
-  - gdal=3.0.2
-  - geopandas=0.8.1
-  - geos=3.8.0
-  - geotiff=1.5.1
-  - get_terminal_size=1.0.0
-  - gevent=20.9.0
-  - giflib=5.1.4
-  - glib=2.63.1
-  - glob2=0.7
-  - gmp=6.1.2
-  - gmpy2=2.0.8
-  - graphite2=1.3.14
-  - greenlet=0.4.17
-  - gst-plugins-base=1.14.0
-  - gstreamer=1.14.0
-  - h5py=2.10.0
-  - harfbuzz=1.8.8
-  - hdf4=4.2.13
-  - hdf5=1.10.4
-  - heapdict=1.0.1
-  - html5lib=1.1
-  - icu=58.2
-  - idna=2.10
-  - imageio=2.9.0
-  - imagesize=1.2.0
-  - importlib-metadata=2.0.0
-  - importlib_metadata=2.0.0
-  - iniconfig=1.1.1
-  - intel-openmp=2020.2
-  - intervaltree=3.1.0
-  - ipykernel=5.3.4
-  - ipython=7.19.0
-  - ipython_genutils=0.2.0
-  - ipywidgets=7.5.1
-  - isort=5.6.4
-  - itsdangerous=1.1.0
-  - jbig=2.1
-  - jdcal=1.4.1
-  - jedi=0.17.1
-  - jeepney=0.5.0
-  - jinja2=2.11.2
-  - joblib=0.17.0
-  - jpeg=9b
-  - json-c=0.13.1
-  - json5=0.9.5
-  - jsonschema=3.2.0
-  - jupyter=1.0.0
-  - jupyter_client=6.1.7
-  - jupyter_console=6.2.0
-  - jupyter_core=4.6.3
-  - jupyterlab=2.2.6
-  - jupyterlab_pygments=0.1.2
-  - jupyterlab_server=1.2.0
-  - kealib=1.4.7
-  - keyring=21.4.0
-  - kiwisolver=1.3.0
-  - krb5=1.16.4
-  - lazy-object-proxy=1.4.3
-  - lcms2=2.11
-  - ld_impl_linux-64=2.33.1
-  - libarchive=3.3.3
-  - libboost=1.67.0
-  - libcurl=7.67.0
-  - libdap4=3.19.1
-  - libedit=3.1.20191231
-  - libffi=3.2.1
-  - libgcc-ng=9.1.0
-  - libgdal=3.0.2
-  - libgfortran-ng=7.3.0
-  - libkml=1.3.0
-  - liblief=0.10.1
-  - libllvm9=9.0.1
-  - libnetcdf=4.6.1
-  - libpng=1.6.37
-  - libpq=11.2
-  - libsodium=1.0.18
-  - libspatialindex=1.9.3
-  - libspatialite=4.3.0a
-  - libssh2=1.9.0
-  - libstdcxx-ng=9.1.0
-  - libtiff=4.1.0
-  - libtool=2.4.6
-  - libuuid=1.0.3
-  - libxcb=1.14
-  - libxml2=2.9.10
-  - libxslt=1.1.34
-  - llvmlite=0.33.0
-  - lmfit=1.0.1
-  - locket=0.2.0
-  - lxml=4.6.1
-  - lz4-c=1.8.1.2
-  - lzo=2.10
-  - markupsafe=1.1.1
-  - matplotlib=3.3.2
-  - matplotlib-base=3.3.2
-  - mccabe=0.6.1
-  - mistune=0.8.4
-  - mkl=2020.2
-  - mkl-service=2.3.0
-  - mkl_fft=1.2.0
-  - mkl_random=1.1.1
-  - mock=4.0.2
-  - more-itertools=8.6.0
-  - mpc=1.1.0
-  - mpfr=4.0.2
-  - mpmath=1.1.0
-  - msgpack-python=1.0.0
-  - multipledispatch=0.6.0
-  - munch=2.5.0
-  - navigator-updater=0.2.1
-  - nbclient=0.5.1
-  - nbconvert=6.0.7
-  - nbformat=5.0.8
-  - ncurses=6.2
-  - nest-asyncio=1.4.2
-  - networkx=2.5
-  - nltk=3.5
-  - nose=1.3.7
-  - notebook=6.1.4
-  - numba=0.50.1
-  - numexpr=2.7.1
-  - numpy=1.19.2
-  - numpy-base=1.19.2
-  - numpydoc=1.1.0
-  - olefile=0.46
-  - openjpeg=2.3.0
-  - openpyxl=3.0.5
-  - openssl=1.1.1h
-  - packaging=20.4
-  - pandas=1.1.3
-  - pandoc=2.11
-  - pandocfilters=1.4.3
-  - pango=1.40.14
-  - parso=0.7.0
-  - partd=1.1.0
-  - patchelf=0.12
-  - path=15.0.0
-  - path.py=12.5.0
-  - pathlib2=2.3.5
-  - pathtools=0.1.2
-  - patsy=0.5.1
-  - pcre=8.44
-  - pep8=1.7.1
-  - pexpect=4.8.0
-  - pickleshare=0.7.5
-  - pillow=8.0.1
-  - pip=20.2.4
-  - pixman=0.40.0
-  - pkginfo=1.6.1
-  - pluggy=0.13.1
-  - ply=3.11
-  - poppler=0.65.0
-  - poppler-data=0.4.10
-  - postgresql=11.2
-  - proj=6.2.1
-  - prometheus_client=0.8.0
-  - prompt-toolkit=3.0.8
-  - prompt_toolkit=3.0.8
-  - psutil=5.7.2
-  - ptyprocess=0.6.0
-  - py=1.9.0
-  - py-lief=0.10.1
-  - pycodestyle=2.6.0
-  - pycosat=0.6.3
-  - pycparser=2.20
-  - pycryptodome=3.9.8
-  - pycurl=7.43.0.5
-  - pydocstyle=5.1.1
-  - pyflakes=2.2.0
-  - pygments=2.7.2
-  - pylint=2.6.0
-  - pyodbc=4.0.30
-  - pyopenssl=19.1.0
-  - pyparsing=2.4.7
-  - pyproj=2.6.1.post1
-  - pyqt=5.9.2
-  - pyrsistent=0.17.3
-  - pysocks=1.7.1
-  - pytables=3.6.1
-  - pytest=6.1.1
-  - python=3.8.2
-  - python-dateutil=2.8.1
-  - python-jsonrpc-server=0.4.0
-  - python-language-server=0.35.1
-  - python-libarchive-c=2.9
-  - python_abi=3.8
-  - pytz=2020.1
-  - pywavelets=1.1.1
-  - pyxdg=0.27
-  - pyyaml=5.3.1
-  - pyzmq=19.0.2
-  - qdarkstyle=2.8.1
-  - qt=5.9.7
-  - qtawesome=1.0.1
-  - qtconsole=4.7.7
-  - qtpy=1.9.0
-  - readline=7.0
-  - regex=2020.10.15
-  - requests=2.24.0
-  - ripgrep=12.1.1
-  - rope=0.18.0
-  - rtree=0.9.4
-  - ruamel_yaml=0.15.87
-  - scikit-image=0.17.2
-  - scikit-learn=0.23.2
-  - scipy=1.5.2
-  - seaborn=0.11.0
-  - secretstorage=3.1.2
-  - send2trash=1.5.0
-  - setuptools=50.3.1
-  - shapely=1.7.1
-  - simplegeneric=0.8.1
-  - singledispatch=3.4.0.3
-  - sip=4.19.13
-  - six=1.15.0
-  - snappy=1.1.8
-  - snowballstemmer=2.0.0
-  - sortedcollections=1.2.1
-  - sortedcontainers=2.2.2
-  - soupsieve=2.0.1
-  - sphinx=3.2.1
-  - sphinxcontrib=1.0
-  - sphinxcontrib-applehelp=1.0.2
-  - sphinxcontrib-devhelp=1.0.2
-  - sphinxcontrib-htmlhelp=1.0.3
-  - sphinxcontrib-jsmath=1.0.1
-  - sphinxcontrib-qthelp=1.0.3
-  - sphinxcontrib-serializinghtml=1.1.4
-  - sphinxcontrib-websupport=1.2.4
-  - spyder=4.1.5
-  - spyder-kernels=1.9.4
-  - sqlalchemy=1.3.20
-  - sqlite=3.33.0
-  - statsmodels=0.12.0
-  - sympy=1.6.2
-  - tbb=2018.0.5
-  - tblib=1.7.0
-  - terminado=0.9.1
-  - testpath=0.4.4
-  - threadpoolctl=2.1.0
-  - tifffile=2020.10.1
-  - tiledb=1.6.3
-  - tk=8.6.10
-  - toml=0.10.1
-  - toolz=0.11.1
-  - tornado=6.0.4
-  - tqdm=4.51.0
-  - traitlets=5.0.5
-  - typing_extensions=3.7.4.3
-  - ujson=4.0.1
-  - uncertainties=3.1.5
-  - unicodecsv=0.14.1
-  - unixodbc=2.3.9
-  - urllib3=1.25.11
-  - watchdog=0.10.3
-  - wcwidth=0.2.5
-  - webencodings=0.5.1
-  - werkzeug=1.0.1
-  - wheel=0.35.1
-  - widgetsnbextension=3.5.1
-  - wrapt=1.11.2
-  - wurlitzer=2.0.1
-  - xarray=0.16.1
-  - xerces-c=3.2.3
-  - xlrd=1.2.0
-  - xlsxwriter=1.3.7
-  - xlwt=1.3.0
-  - xmltodict=0.12.0
-  - xz=5.2.5
-  - yaml=0.2.5
-  - yapf=0.30.0
-  - zeromq=4.3.3
-  - zict=2.0.0
-  - zipp=3.4.0
-  - zlib=1.2.11
-  - zope=1.0
-  - zope.event=4.5.0
-  - zope.interface=5.1.2
-  - zstd=1.3.7
-  - pip:
-    - affine==2.3.0
-    - mutagen==1.45.1
-    - rasterio==1.1.5
-    - snuggs==1.4.7
-prefix: /home/strebdom/anaconda3
+  - anaconda
+  - lmfit
+prefix: /home/strebdom/anaconda3/envs/myenv
